add mockup of heroes

--- a/src/app/heroes/heroes/heroes.component.html
+++ b/src/app/heroes/heroes/heroes.component.html
@@ -1,8 +1,9 @@
 
-<h3>{{hero.name | uppercase}} Details </h3>
+<!-- <h3>{{hero.name | uppercase}} Details </h3>
 
 <div><span>Id: {{hero.id}} </span></div>
 <div>
     <label for="name">Hero name: </label>
-    <input id="name" [(ngModel)] = "hero.name" placeholder="name"> 
+    <input id="name" [(ngModel)] = "" placeholder="name"> 
 </div>
+-->
